# fx-event-bus

./: .env  .envrc  .gitignore  Cargo.toml  README.md  TEST_PLAN.md  publish.sh  transaction_benchmark.sql
.cargo/: config.toml
.sqlx/: query-1a7072e55fe45fb75ac2f4132926d4797042abad5d748206c360b09bf79056f1.json  query-31f611faaf3cb8530c5a6d151f251dec6c706d93cff0ef9c13f48f02bc363773.json  query-332c70038a9b4276bfbfddb98e52ad204a6af29dd27171a8d5f87ad150d29ea2.json  query-58a484d3cd11e38a35be650e7cb356ea9b6321a40b2534fe70eb05a04ac33412.json  query-5cf59e689d41461d2f50a2f5ecbd58e18f07c074d62f7ab4ab058a15db02d272.json  query-6362be5766ca313ab943a37199a9de8f3f8fad84863f6b95c93432d61f583987.json  query-748eeaaf0844c0ecd73ed79a98456e623d0ae07685774a2db996e3a2f8cd0512.json  query-7c618183f88f6526cfdcefbde3e6487c01c6439d6dca4c01f661be1bc993fa2b.json  query-9101678f9b8b3a71be75dd9477a64988b17844ba5ddfe82ccaf02c8d43da90e5.json  query-a2edaede18cca0609fc9c36d0fb8ef54050f8fdc0d0af5c62db7840201c647e7.json  query-aeeb4d49bcc31fd65e7dc214d47a824866b035a052bbe9b58711f98910e9e94f.json  query-b909287f23e0fb0983e6fb06522eeb3ff97d2346d518fc12bc7289bdd5fa88aa.json  query-d11a462a34269e687c3bdf5feb3487d688b098280f81fcbbf7860b50519fd794.json  query-d548ebf814b7503247bee5518e6a430b3bd349bad3363e6930636a4da6f0eae0.json  query-da8889e316d6846f62a658d0afa42a8bf6bfb57526c5e61e47aa99bb733c319b.json  query-f0075dad6d7ead5777287a39fa828c0b008fb4b638030bfb6ae14f033fa3a02d.json
.zed/: settings.json
examples/: throughput_benchmark.rs
migrations/: 20250921091859_inital.down.sql  20250921091859_inital.up.sql
src/: chainable.rs  lib.rs  migrations.rs  models.rs  test_tools.rs
src/handler/: errors.rs  event_handler.rs  handler_group.rs  handler_registry.rs  mod.rs
src/listener/: errors.rs  listener.rs  mod.rs  poll_control.rs  test_plan.md  test_tools.rs
src/listener/methods/: listen.rs  mod.rs  poll.rs  poll_retryable.rs  poll_unacknowledge.rs  poll_unacknowledged.rs  report_failure.rs  report_success.rs
src/listener/test_tools/: mod.rs
src/publisher/: errors.rs  mod.rs  publisher.rs
src/test_utils/: events.rs  handlers.rs  mod.rs  queries.rs  runner.rs
