[package]
name = "fx-event-bus"
version = "0.1.2"
edition = "2024"
authors = ["Jakob Lilliemarck <lilliemarckjakob@gmail.com>"]

description = "An event bus for monoliths, built with Postgres and sqlx"
license = "MIT"
repository = "https://github.com/jakob-lilliemarck/fx-event-bus"

[[example]]
name = "benchmark"
path = "examples/throughput_benchmark.rs"

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { workspace = true, features = ["migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
const-fnv1a-hash = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
dotenv = { workspace = true }
textplots = "0.8.7"
tabled = { workspace = true }
