[package]
name = "fx-event-bus"
version = "0.1.12"
edition = "2024"
authors = ["Jakob Lilliemarck <lilliemarckjakob@gmail.com>"]

description = "An event bus for monoliths, built with Postgres and sqlx"
license = "MIT"
repository = "https://github.com/jakob-lilliemarck/fx-event-bus"

[features]
default = []
test-tools = ["anyhow", "tokio-util", "tracing-subscriber"]

[[example]]
name = "benchmark"
path = "examples/throughput_benchmark.rs"

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio", "tls-rustls-ring", "postgres", "chrono", "uuid"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
futures = "0.3.31"
thiserror = "2.0.12"
const-fnv1a-hash = "1.1"
chrono = "0.4.39"
tracing = "0.1.41"
uuid = { version = "1.14.0", features = ["serde", "v7"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "full", "tracing"] }
anyhow = { version = "1.0.95", optional = true }
tokio-util = { version = "0.7.16", features = ["rt"], optional = true }
tracing-subscriber = { version = "0.3.19", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "full", "tracing"] }
dotenv = "0.15.0"
textplots = "0.8.7"
tabled = "=0.9.0"
